vNext
----------
- [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)

V.10.1.1
----------
- [PATCH] V10.1.0 was incorrectly built with RC versions, need to increment to V10.1.1
- [MINOR] Add dialogs to prompt user to remove smartcard within CBA flow (#1966)
- [PATCH] Minor fixes to stop NFC discovery upon cancellation of some dialogs (#1972)
- [PATCH] Add metric to measure network check success, failure counts (#1962)
- [MINOR] Add flighting capability for common (#1961)
- [MINOR] Add preferred browser support (#1957)
- [PATCH] Use android.net.NetworkCapabilities to check internet connectivity (#1887)
- [MINOR] Adding new methods in IAccountCredentialAdapter (#1954)
- [MINOR] Add a Basic Encryptor Interface + Add support to Encrypt / Decrypt using AES GCM (#1953)
- [MINOR] Setting sub error codes to UiRequiredException for MsalUiRequiredException (#1944)
- [MINOR] Wrap Runnable with Current Telemetry Context (#1956)
- [MINOR] Update JweResponse APIs and added Additional Authenticated Data (AAD) (#1958)
- [MINOR] Move JWT classes to common (#1968)
- [PATCH] Create a custom safe Global Open Telemetry that doesn't crash (#1977)

V.10.0.1
----------
- [PATCH] Improve the exception stack trace when a not valid broker is found (#1980)
- [PATCH] Create a custom safe Global Open Telemetry that doesn't crash (#1977)

V.10.0.0
----------
- [MINOR] Add activity (InstallCertActivityLauncher) to launch the Install WPJ cert activity (#1924)
- [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
- [MINOR] Add application identifier during authorization request initialization (#1942)
- [MINOR] Add NFC compatibility and telemetry to CBA (#1896)
- [MINOR] Format thread+correlationId metadata only once logging is clearly opted-in (#1917)
- [MINOR] Remove unnecessary synchronization when storage access is already guarded (#1928)
- [MINOR] Write back read successes to cache and stop extra lookups in getAll (#1927)