@@ -1,5 +1,6 @@
 vNext
 ----------
+- [PATCH] Getting rid of account manager strategy in MSAL/OneAuth (#1988)
 - [MINOR] Add JWT Claims to MicrosoftStsTokenRequest to support PRT v3 (#1969)
 
 V.10.1.1
